<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="adjustResize"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/done"
                android:padding="12dp"
                android:src="@drawable/ic_done_white"
                android:layout_alignParentRight="true"
                android:layout_width="48dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/close"
                android:padding="12dp"
                android:src="@drawable/ic_close_white_24px"
                android:layout_width="48dp"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.pranitkulkarni.expensemanager.bank_accounts.AddAccount">

        <TextView
            android:text="SELECT ACCOUNT TYPE"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <RadioButton
                android:id="@+id/radio_cash"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/icon_cash"
                tools:ignore="MissingPrefix"
                fontPath="@string/font_awesome"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                style="@style/RadioButtonStyleGreen"
                android:layout_width="0dp"
                android:layout_height="match_parent" />


            <RadioButton
                android:id="@+id/radio_card"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/icon_card"
                tools:ignore="MissingPrefix"
                fontPath="@string/font_awesome"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                style="@style/RadioButtonStyleGreen"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </RadioGroup>

        <EditText
            android:id="@+id/account_name"
            android:layout_margin="12dp"
            android:hint="Account name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/balance"
            android:gravity="center"
            android:textSize="24sp"
            android:inputType="numberDecimal"
            android:layout_margin="12dp"
            android:hint="Balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>

