<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="adjustResize">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/done"
                android:padding="12dp"
                android:src="@drawable/ic_done_white"
                android:layout_alignParentRight="true"
                android:layout_width="48dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/close"
                android:padding="12dp"
                android:src="@drawable/ic_close_white_24px"
                android:layout_width="48dp"
                android:layout_height="match_parent" />

        </RelativeLayout>


        <RelativeLayout
            android:padding="8dp"
            android:minHeight="80dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/currency"
                android:gravity="center"
                android:text="$"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_marginLeft="12dp"
                android:layout_centerVertical="true"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <EditText
                android:id="@+id/balance"
                android:background="@android:color/transparent"
                android:inputType="numberDecimal"
                android:textSize="24sp"
                android:hint="Enter balance"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:layout_marginRight="12dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_margin="8dp"
                fontPath="@string/OpenSans_SemiBold"
                android:text="SELECT ACCOUNT TYPE"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingPrefix" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <RadioButton
                    android:id="@+id/radio_cash"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:text="@string/icon_cash"
                    tools:ignore="MissingPrefix"
                    fontPath="@string/font_awesome"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    style="@style/RadioButtonStyleGreen"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />


                <RadioButton
                    android:id="@+id/radio_card"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:text="@string/icon_card"
                    tools:ignore="MissingPrefix"
                    fontPath="@string/font_awesome"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    style="@style/RadioButtonStyleGreen"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <RadioButton
                    android:id="@+id/radio_bank"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:text="@string/icon_bank"
                    tools:ignore="MissingPrefix"
                    fontPath="@string/font_awesome"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    style="@style/RadioButtonStyleGreen"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:text="CASH"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:gravity="center"
                    android:text="CARD"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:gravity="center"
                    android:text="BANK"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <View
                android:layout_marginTop="8dp"
                android:background="@color/grey_300"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>



            <LinearLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:src="@drawable/ic_description"
                    android:layout_width="48dp"
                    android:layout_height="32dp" />

                <EditText
                    android:id="@+id/account_name"
                    android:minHeight="40dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:hint="Enter account name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <View
                android:background="@color/grey_300"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>


    </ScrollView>


</android.support.design.widget.CoordinatorLayout>